# skills

./: .gitignore  .last-refresh  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Justfile  README.md  SKILL.md  nx.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json
chrome-extension-wxt/: SKILL.md  package.json  project.json
cloudflare-workers/: CHANGELOG.md  package.json  project.json
docs/: release-automation.md  skill-linting.md
erc-8004/: SKILL.md  package.json  project.json
founder-playbook/: package.json  project.json
foundry-solidity/: SKILL.md  package.json
frontend-dev/: CHANGELOG.md  package.json  project.json
gh-cli/: SKILL.md  package.json  project.json
impactful-writing/: CHANGELOG.md  SKILL.md  package.json  project.json
python-dev/: CHANGELOG.md  package.json  project.json
references/: boot-provisioning.md  channels-extensions.md  cli-commands.md  configuration.md  github-context.md  models-providers.md  plugin-system.md
scripts/: check_skills.py  generate_readme.py  prepare_skill_release.py  publish_release.py  pull-and-diff.sh
skill-factory/: README.md  SKILL.md  package.json  project.json
skill-finder/: SKILL.md  package.json  project.json
solana/: CHANGELOG.md  README.md  package.json
styling-with-tailwind/: CHANGELOG.md  package.json  project.json
swift-macos/: CHANGELOG.md  SKILL.md  package.json  project.json
tanstack/: package.json  project.json
tanstack-query/: CHANGELOG.md  package.json
uv-ruff-python-tools/: SKILL.md  package.json  (+1 more)
(+423 files in other folders)
